[package]
name = "clnt"
version = "0.1.0"
authors = ["leod <subtle.frustration@proton.me>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"

js-sys = "0.3.37"
wasm-bindgen = { version = "0.2.60", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.10"

quicksilver = { version = "=0.4.0-alpha0.2", features = ["web-sys"] }

comn = { path = "../comn" }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

[dependencies.web-sys]
version = "0.3.37"
features = [
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Window',
  'Location',
  'Event',
  'ErrorEvent',
  'MessageEvent',
  'RtcConfiguration',
  'RtcPeerConnection',
  'RtcDataChannel',
  'RtcDataChannelInit',
  'RtcSessionDescriptionInit',
  'RtcIceCandidate',
]
