[package]
name = "clnt"
version = "0.1.0"
authors = ["Leonard Dahlmann <leo.dahlmann@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
log = "0.4"
serde = { version = "1.0" }

js-sys = "0.3.37"
wasm-bindgen = { version = "0.2.60", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.10"

quicksilver = { version = "=0.4.0-alpha0.5", default-features = false, features = ["web-sys", "font", "ttf", "easy-log"] }
mint = "0.5"
nalgebra = { version = "0.21", features = ["mint"] }
instant = "0.1"
#pareen = { path = "../../pareen", features = ["easer"] } 
pareen = { git = "https://github.com/leod/pareen.git", branch = "anim_with_dur", features = ["easer"] }
coarse-prof = { git = "https://github.com/leod/coarse-prof.git" }

comn = { path = "../comn" }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

[dependencies.web-sys]
version = "0.3.37"
features = [
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Window',
  'Location',
  'Event',
  'ErrorEvent',
  'Blob',
  'MessageEvent',
  'RtcConfiguration',
  'RtcPeerConnection',
  'RtcDataChannel',
  'RtcDataChannelInit',
  'RtcSessionDescriptionInit',
  'RtcIceCandidate',
  'RtcDataChannelType',
  'RtcDataChannelState',
]

