[package]
name = "comn"
version = "0.1.0"
authors = ["Leonard Dahlmann <leo.dahlmann@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_json = "1.0"
uuid = { version = "0.8", features = ["serde"] }
nalgebra = { version = "0.21", features = ["serde-serialize"] }
