[package]
name = "comn"
version = "0.1.0"
authors = ["leod <subtle.frustration@proton.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_json = "1.0"
rmp-serde = "0.14"
uuid = { version = "0.8", features = ["serde"] }
nalgebra = { version = "0.21", features = ["serde-serialize", "mint"] }
instant = "0.1"
log = "0.4"
rand = "0.7"

coarse-prof = { git = "https://github.com/leod/coarse-prof.git" }
pareen = { git = "https://github.com/leod/pareen.git", branch = "brainstorm", features = ["easer"] }
