[package]
name = "serv"
version = "0.1.0"
authors = ["leod <subtle.frustration@proton.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13"
tokio = { version = "0.2", features = ["full"] }
clap = "2.33"
env_logger = "0.7"
log = "0.4"
uuid = { version = "0.8", features = ["v4", "serde"] }
comn = { path = "../comn" }
