[package]
name = "serv"
version = "0.1.0"
authors = ["leod <subtle.frustration@proton.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
serde = "1.0"
serde_json = "1.0"
env_logger = "0.7"
clap = "2.33"
uuid = { version = "0.8", features = ["v4", "serde"] }

futures = "0.3.4"
tokio = { version = "0.2", features = ["full"] }

hyper = "0.13"
comn = { path = "../comn" }
